# py-trkpac

./: .gitignore  LICENSE  README.md  py-trkpac  pyproject.toml
.github/workflows/: python-publish.yml
shell_configs/: bashrc.py  fish.py  zshrc.py
src/py_trkpac/: __main__.py  cli.py  db.py  installer.py  shell.py  utils.py
